<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY base_test_url "https://matypa.azurewebsites.net/m">]>

<resources>
    <string name="app_name">Матура Мат</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_auth">Auth Activity</string>

    <string name="test_result_url">&base_test_url;/test/reviewResult/%1$s</string>

    <!-- Facebook App ID -->
    <!--    <string name="facebook_app_id">1063983791112481</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb1063983791112481</string>-->
    <!--    <string name="facebook_client_token">359101d1ccf9a3e1b39240b14508d195</string>-->


    <string name="authorization">bearer %s</string>

    <string name="title_home">Начало</string>
    <string name="title_tests_2">Тестове*</string>
    <string name="title_settings">Настройки</string>
    <string name="title_tests">Тестове</string>
    <string name="title_test">Тест</string>
    <string name="title_account">Профил</string>
    <string name="title_login">Вход</string>
    <string name="title_confirm_account">Потвърждение на профил</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_google">Гугъл</string>
    <string name="title_facebook">Фейсбук</string>
    <string name="email_confirmation_title">Имейл потвърждение</string>
    <string name="password_reset_title">Възстановяване на парола</string>
    <string name="test_result_title">Резултат</string>

    <!-- image descriptions -->
    <string name="test_image_description">Emoticon description</string>
    <string name="test_meta_description">Elapsed time</string>
    <string name="sign_in_with_google_description">Влезте с профила си от Гугъл</string>
    <string name="sign_in_with_facebook_description">Влезте с профила си в Фейсбук</string>
    <string name="disabled_profile_img">Анонимна снимка на профила</string>
    <string name="wifi_off_description">Няма Интернет връзка</string>
    <string name="email_alert_description">Непотвърден имейл адрес</string>
    <string name="check_email_description">Бутон към пощата</string>
    <string name="new_email_confirmation_link_description">Бутон за заявка на нов линк за потвърждение на имейл</string>
    <string name="check_description">Успешна операция</string>
    <string name="new_test_description">Бутон за начало на нов тест</string>

    <!-- fragment_login layout -->
    <string name="account_off_image_description">Account off image</string>
    <string name="password_reset_text">Забравена парола</string>
    <string name="sign_up_text">Създай профил</string>
    <string name="login_btn_text">Влез</string>
    <string name="external_login_text">Влез с профила си от</string>
    <string name="email_confirmation_in_progress_message">Проверка на имейл адреса.</string>

    <!-- fragment_registration layout -->
    <string name="registration_form">Регистрационна форма</string>
    <string name="with_social_media">чрез социална медия</string>
    <string name="registration_btn_text">Регистрация</string>

    <!-- fragment_account layout -->
    <string name="loginBtn">Вход</string>

    <!-- hints -->
    <string name="hint_email">Имейл</string>
    <string name="hint_password">Парола</string>
    <string name="hint_confirm_password">Потвърждение</string>

    <!-- fragment_no_connection layout -->
    <string name="no_connection_message">Не беше открита връзка с Интернет. Моля проверете настройките на телефона си към Интернет и опитайте отново.</string>
    <string name="oops">Опа!</string>

    <!-- fragment_email_confirmation layout -->
    <string name="confirm_email_title">Профилът изисква активиране</string>
    <string name="confirm_email_message">
        Последна стъпка при създаването на профил е активирането му чрез кликване върху линк изпратен от
        системата на посочения от Вас имейл адрес.\n Моля проверете електронната си поща.\n Ако не сте получили
        имейл с линк за активиране от нас или е невалиден, изискайте нов.
    </string>
    <string name="open_email_client_text">Към електронната поща</string>
    <string name="new_confirmation_link_text">Нов линк за активиране на профила</string>

    <!-- fragment_confirm_account layout -->
    <string name="confirm_account_text">За да свържем профила Ви от %1$s с %2$s от Мтура Мат е необходимо да потвърдите, че е ваш.</string>
    <string name="profile_in_maturamat_text">Профил в Матура Мат</string>

    <!-- Registration form validation messages/alerts -->
    <string name="email_required_message">Изисква се имейл адрес</string>
    <string name="email_invalid">Невалиден имейл адрес.</string>
    <string name="password_requirements_message">Паролата трябва да е дълга поне %1$d символа и да съдържа малка буква</string>
    <string name="password_confirm_required_message">Изисква се потвърждение на паролата</string>
    <string name="password_no_match_message">Паролите не съвпадат</string>
    <string name="email_taken_alert">%1$s е вече зает.</string>

    <!-- fragment_password_reset layout -->
    <string name="reset_password_text">Въведете имейл адреса, с който сте регистриран. На електронната
        Ви поща ще бъде изпратен линк за възстановяване на паролата.</string>

    <!-- fragment_count_down_timer layout -->
    <string name="timer_content_description">Хронометър</string>

    <!-- general button texts -->
    <string name="send_btn">Изпрати</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Отказ</string>
    <string name="logout_btn">Изход</string>
    <string name="yes_btn">Да</string>
    <string name="no_btn">Не</string>
    <string name="start_btn">Старт</string>
    <string name="check_btn">Провери</string>

    <string name="email_not_found">%1$s не е намерен. Проверете за грешка и опитайте пак.</string>
    <string name="forgot_password_success_message">На %1$s е изпратен имейл с линк и процедура за възстановяване на забравена парола. Посетете пощата си за да промените паролата си.</string>

    <!-- confirm_email_notification -->
    <string name="confirm_email_notification_content_title">Активиране на профил</string>
    <string name="confirm_email_notification__content_text">Профилът Ви е активиран успешно.</string>
    <string name="confirm_email_notification_channel_id">confirm_email_notification_channel_id</string>
    <string name="confirm_email_notification_channel_name">Email_Confirmation_Channel</string>
    <string name="confirm_email_notification_channel_description">Email confirmation succeeded</string>

    <!-- Settings -->
    <string name="category_test_key">category_test_key</string>
    <string name="category_test_title">Тест</string>
    <string name="test_size_key">test_size_key</string>
    <string name="test_size_title">Брой задачи</string>
    <string name="timer_key">timer_key</string>
    <string name="timer_title">Таймер</string>
    <string name="test_view_key">test_view_key</string>
    <string name="test_view_title">Изглед</string>
    <string name="test_view_list">Списък</string>
    <string name="test_view_cards">Карти</string>
    <string name="test_view_default">@string/test_view_list</string>
    <string name="test_view_summary">@string/test_view_list</string>
    <string-array name="test_view_names">
        <item>@string/test_view_list</item>
        <item>@string/test_view_cards</item>
    </string-array>
    <string-array name="test_view_values">
        <item>@string/test_view_list</item>
        <item>@string/test_view_cards</item>
    </string-array>
    <string name="category_feedback_key">category_feedback_key</string>
    <string name="category_feedback_title">Обратна връзка</string>
    <string name="feedback_rate_key">feedback_rate_key</string>
    <string name="feedback_rate_title">Оцени</string>
    <string name="feedback_share_key">feedback_share_key</string>
    <string name="feedback_share_title">Сподели</string>
    <string name="category_about_key">category_about_key</string>
    <string name="category_about_title">За нас</string>
    <string name="about_version_key">about_version_key</string>
    <string name="about_version_title">Версия</string>
    <string name="version_default_value">1.0.0</string>
    <string name="test_timer_off_summary">
        Таймерът може да се включи, когато броят на задачите в теста е %1$d.
    </string>

    <!-- fragment_bottom_sheet -->
    <string name="prev_card_description">Към предишна задача</string>
    <string name="next_card_description">Към следваща задача</string>
    <string name="placeholder_fragment">I am a placeholder</string>

    /*
    * Test Scrim Notice dialog strings
    */
    <string name="test_duration_message">Време за работа - %1$s</string>
    <string name="test_begin_message">Начало на теста.</string>
    <string name="test_cancel_message">
        Тестът ще бъде запазен.\nСигурни ли сте, че искате да прекъснете сега?
    </string>
    <string name="test_check_message">Ако сте готови с теста, моля потвърдете за да бъде проверен.</string>
    <string name="test_time_finish_message">Времето за работа изтече.</string>
    <string name="test_left_time">Оставащо време - %1$s</string>
    <string name="test_begin_title">Начало</string>
    <string name="test_stop_title">Пауза</string>
    <string name="test_cancel_title">Прекъсване на теста</string>
    <string name="test_time_finish_title">Край на теста</string>
    <string name="test_resume_btn">Продължи</string>
    <string name="test_stop_btn">Край</string>
    <string name="check_result_btn">Проверка на резултата</string>

    <!-- Menu items -->
    <string name="mi_check_result">Проверка на резултата</string>

    <string name="text_welcome"></string>
    <string name="password_validation_message">Паролата трябва да е поне %1$d символа</string>
    <string name="email_validation_message">Невалиден имейл</string>
    <string name="create_new_test_desc">Create new test</string>
    <string name="title_activity_new_test2">NewTest2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="test2_fragment_title">Тест</string>
    <string name="test2_result_title">Резултат</string>
    <string name="test2_tab_layout">Tabs for switching between test items</string>
    <string name="btn_start">Начало</string>
    <string name="problem_no">Задача %1$d</string>
    <string name="cameraButtonText">Снимай решение [%1$d/2]</string>
    <string name="take_a_photo_desc">Take a photo</string>
    <string name="confirm_photo_button_desc">Confirm photo button</string>
    <string name="resume_camera_button_desc">Resume camera button</string>
    <string name="photo_description">Photo</string>
    <string name="solution_image_desc">Картинка на решение на задача</string>
    <string name="close_solution_view">Close Solution View</string>
    <string name="attached_solutions_text">Прикачени решения - %1$d</string>
    <string name="task_1">Задача 1</string>
    <string name="task_2">Задача 2</string>
    <string name="upload_state_icon_dsc">Upload state icon</string>
    <string name="task_3">Задача 3</string>
    <string name="solutions">Решения</string>
    <string name="send_button">Изпрати</string>
    <string name="cancel_button">Отказ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>