<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tests"
        android:icon="@drawable/ic_tests_black_24"
        android:title="@string/title_tests" />

    <item
        android:id="@+id/navigation_tests_2"
        android:icon="@drawable/ic_baseline_subscript_24"
        android:title="@string/title_tests_2" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_24"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24"
        android:title="@string/title_settings" />
</menu>