<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ahmedmatem.android.matura.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tests"
        android:name="com.ahmedmatem.android.matura.ui.test.TestListFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_test" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ahmedmatem.android.matura.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ahmedmatem.android.matura.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>