<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ahmedmatem.android.matura.ui.account.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:context=".ui.account.AccountFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textAppearance="@style/TitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            tools:text="Вход" />

        <EditText
            android:id="@+id/userName"
            style="@style/EditTextLoginStyle"
            android:autofillHints="emailAddress"
            android:drawableStart="@drawable/ic_account_black_24"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextLoginStyle"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:drawableStart="@drawable/ic_lock_outline_black_24"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/BaseButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:enabled="@{viewModel.loginButtonEnabled.booleanValue()}"
            android:onClick="@{() -> viewModel.loginWithLocalAccount()}"
            android:text="@string/login_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/passwordResetLink"
            style="@style/TextLinkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{()->viewModel.navigateToPasswordReset()}"
            android:text="@string/password_reset_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/signUpLink"
            style="@style/TextLinkStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.navigateToRegistration()}"
            android:padding="@dimen/small_padding"
            android:text="@string/sign_up_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordResetLink" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/external_login_text"
            app:layout_constraintBottom_toTopOf="@+id/googleLoginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/googleLoginButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/form_button_bg"
            android:contentDescription="@string/sign_in_with_google_description"
            android:onClick="@{() -> viewModel.loginWithGoogle()}"
            app:layout_constraintBottom_toBottomOf="@+id/facebookLoginBtn"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:srcCompat="@drawable/fui_ic_googleg_color_24dp" />

        <ImageButton
            android:id="@+id/facebookLoginBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/form_button_bg"
            android:contentDescription="@string/sign_in_with_facebook_description"
            android:onClick="@{() -> viewModel.loginWithFacebook()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:srcCompat="@drawable/fui_ic_facebook_white_22dp" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressBar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:fadeVisible="@{viewModel.showLoading.booleanValue()}"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.501"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            tools:layout_editor_absoluteY="517dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>