<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.ahmedmatem.android.matura.ui.account.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_noConnectionFragment"
            app:destination="@id/noConnectionFragment" />
        <action
            android:id="@+id/action_loginFragment_to_emailConfirmationFragment"
            app:destination="@id/emailConfirmationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_passwordResetFragment"
            app:destination="@id/passwordResetFragment" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.ahmedmatem.android.matura.ui.account.registration.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_registrationFragment_to_noConnectionFragment"
            app:destination="@id/noConnectionFragment" />
        <action
            android:id="@+id/action_registrationFragment_to_emailConfirmationFragment"
            app:destination="@id/emailConfirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/noConnectionFragment"
        android:name="com.ahmedmatem.android.matura.ui.general.NoConnectionFragment"
        android:label=""
        tools:layout="@layout/fragment_no_connection" />

    <fragment
        android:id="@+id/emailConfirmationFragment"
        android:name="com.ahmedmatem.android.matura.ui.account.EmailConfirmationFragment"
        android:label="@string/email_confirmation_title"
        tools:layout="@layout/fragment_email_confirmation">
        <argument
            android:name="email"
            app:argType="string" />
        <action
            android:id="@+id/action_emailConfirmationFragment_to_noConnectionFragment"
            app:destination="@id/noConnectionFragment" />
        <action
            android:id="@+id/action_emailConfirmationFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/passwordResetFragment"
        android:name="com.ahmedmatem.android.matura.ui.account.reset.PasswordResetFragment"
        android:label="@string/password_reset_title"
        tools:layout="@layout/fragment_password_reset">
        <action
            android:id="@+id/action_passwordResetFragment_to_noConnectionFragment"
            app:destination="@id/noConnectionFragment" />
    </fragment>

</navigation>